crates/rolldown/tests/rolldown/errors/unresolved_import_with_chain_and_help/lib.js
import { a } from "@missing/something";
console.log(a);
